--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -9,6 +9,9 @@
 <body>
     <h1>Mac - Nelson</h1>
                     <p> <em> <b> A Student at </em>  <a href="https://capacitybay.org/">  CapacityBay </ul></a></b></p>
-                    <p>I am a Youtuber, I create contents and also uploading them to my channel.</p>
+                    <p>I am a Student, a Youtuber, I create contents and also uploading them to my channel. I'm  from Ezihinitte Mbaise, Imo state, Nigeria. 
+                        I'm a music lover especially Gospel music.
+                        
+                    </p>
 </body>
 </html>
