--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -65,7 +65,7 @@
     <button type="submit">Submit</button>
     <label for="submmit"  ></label>
     <br> <br>
-    <a href="/index.html">Home Page</a>
+    <a href="../../index.html">Home Page</a>
     </p></h4></form>
 
 
