--- a/pages/hobby/hobby.html
+++ b/pages/hobby/hobby.html
@@ -22,7 +22,7 @@
         <a href="https://www.youtube.com/watch?v=t_aQ6rYvbik">Working</a>
     </li></h3>
     
-    <a href="/index.html">Home Page</a>
+    <a href="../../index.html">Home Page</a>
 </body>
 </html>
 
