--- a/pages/media/mymedia.html
+++ b/pages/media/mymedia.html
@@ -1,8 +1,8 @@
 </head>
 <body>
     <div>
-    <video src="../../multimedia/video/capacity.mp4" controls controlslist="nodownload" width="500px" height="500px"></video>
-    <audio src="../../multimedia/audio/capacity_audio.mp3" controls controlslist="nodownload" ></audio>
+    <video src="/./multimedia/video/capacity.mp4" controls controlslist="nodownload" width="500px" height="500px"></video>
+    <audio src="/./multimedia/audio/capacity_audio.mp3" controls controlslist="nodownload" ></audio>
 
 <div>
     <img src="https://image.shutterstock.com/image-photo/mother-child-having-fun-preparing-260nw-1562611987.jpg" align="left" width="500" alt="">
