--- a/pages/media/mymedia.html
+++ b/pages/media/mymedia.html
@@ -1,8 +1,11 @@
 </head>
 <body>
     <div>
-    <video src="/./multimedia/video/capacity.mp4" controls controlslist="nodownload" width="500px" height="500px"></video>
-    <audio src="/./multimedia/audio/capacity_audio.mp3" controls controlslist="nodownload" ></audio>
+    <video src="/multimedia/video/capacity.mp4" controls controlslist="nodownload" width="500px" height="500px"></video>
+    <audio controls="" controlslist="nodownload" id="myaudio" loop="">
+        <source src="/multimedia/audio/capacity_audio.mp3" type="audio/mpeg">
+    </audio>
+    
 
 <div>
     <img src="https://image.shutterstock.com/image-photo/mother-child-having-fun-preparing-260nw-1562611987.jpg" align="left" width="500" alt="">
@@ -15,6 +18,7 @@
 <div></p>
     
 </div>
+
 <h3><a href="../../index.html">Home Page</a></h3>
 </body>
 </html>
