new change on media

--- a/pages/media/mymedia.html
+++ b/pages/media/mymedia.html
@@ -1,17 +1,19 @@
 </head>
 <body>
     <div>
-    <video src="/multimedia/video/capacity.mp4" controls controlslist="nodownload" width="500px" height="500px"></video>
-    <audio controls="" controlslist="nodownload" id="myaudio" loop="">
-        <source src="/multimedia/audio/capacity_audio.mp3" type="audio/mpeg">
-    </audio>
-    
+    <video src="../../Multimedia/video/capacity.mp4" controls width="500px" controlslist="nodownload"></video>
+   <br>
+   <br>
+   <audio src="../../Multimedia/audio/capacity_audio.mp3" controls="" controlslist="nodownload"></audio>
+    <br>
+    <br>
 
 <div>
     <img src="https://image.shutterstock.com/image-photo/mother-child-having-fun-preparing-260nw-1562611987.jpg" align="left" width="500" alt="">
 </div>
 
-
+<br>
+<br>
 
 <p></div><p>
 <iframe src="https://www.javatpoint.com/" align="right" width="50%" height="100%"></iframe> </p>
@@ -19,6 +21,6 @@
     
 </div>
 
-<h3><a href="../../index.html">Home Page</a></h3>
+
 </body>
 </html>
