--- a/index.html
+++ b/index.html
@@ -10,19 +10,13 @@
 <body>
   
 
- <table cellspacing="20">
- <tbody><tr>
-                <td>
-                    <img src="img/78b664f9-bad2-417d-ae10-7e0230324dc5.png" alt="">
-                </td>
-                <td>
-                    <h1>Mac - Nelson</h1>
-                    <p> <em> <b> A Student at </em>  <a href="https://capacitybay.org/">  CapacityBay </ul></a></b></p>
-                    <p>I am a Youtuber, I create contents and also uploading them to my channel.</p>
-                </td>
+  <img src="../../img/78b664f9-bad2-417d-ae10-7e0230324dc5.png" align="left" width="180px" height="180px" alt="">
                 
-            </tr>
-       </tbody></table>
+  <h1>Mac - Nelson</h1>
+  <p> <em> <b> A Student at </em>  <a href="https://capacitybay.org/">  CapacityBay </ul></a></b></p>
+  <p>I am a Youtuber, I create contents and also uploading them to my channel.</p>
+
+      <br><br>
         <hr>
         <h3>Learnings and Creating </h3>
         <ul>
@@ -91,8 +85,9 @@
         </tbody></table>
         <hr>
        <h3><a href="pages/hobby/hobby.html" >My Hobby</a>
-        <a href="pages/contact/contact.html">Contact Me</a>
-    <a href="pages/media/mymedia.html">My Media</a></h3> 
+        <a href="pages/contact/contact.html">Contact Me</a> <br>
+    <a href="pages/media/mymedia.html">My Media</a> 
+    <a href="/pages/about/about.html">About</a></h3>
     
 
 
