--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -13,5 +13,8 @@
                         I'm a music lover especially Gospel music.
                         
                     </p>
+
+                    <a href="../../index.html">Home Page</a>
+
 </body>
-</html>
+</html> 
