--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   
 
-  <img src="../../img/78b664f9-bad2-417d-ae10-7e0230324dc5.png" align="left" width="180px" height="180px" alt="">
+  <img src="/img/78b664f9-bad2-417d-ae10-7e0230324dc5.png" align="left" width="180px" height="180px" alt="">
                 
   <h1>Mac - Nelson</h1>
   <p> <em> <b> A Student at </em>  <a href="https://capacitybay.org/">  CapacityBay </ul></a></b></p>
